# ticket_buyingdapp

./: Cargo.toml  README.md  dfx.json  did.sh  package-lock.json  package.json  webpack.config.js
src/nft_ticketing_backend/: Cargo.toml  nft_ticketing_backend.did
src/nft_ticketing_backend/src/: lib.rs
src/nft_ticketing_frontend/src/: index.html  index.js
