[package]
name = "nft_ticketing_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]


[dependencies]
candid = "0.9.10"  # Use the version compatible with your ic-cdk version
ic-cdk = "0.11.3"
ic-cdk-macros = "0.8.1"
serde = { version = "1.0.189", features = ["derive"] }
once_cell = "1.10.0"
chrono = "0.4"